style: fix overflow for layput and package page

--- a/app/dashboard/packages/styles.module.css
+++ b/app/dashboard/packages/styles.module.css
@@ -2,6 +2,8 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1em;
+    max-height: calc(100vh - 14em);
+    overflow: scroll;
 }
 .package__card{
     display: flex;
